Fri Apr 27 11:02:33 2012  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* test/rinda/test_rinda.rb (test_core_03_notify): Fixed test failures
	  [ruby-dev:44430] [Ruby 1.9 - Bug #372]

Fri Apr 27 08:29:51 2012  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* test/rinda/test_rinda.rb: fix sticks on some testsf problem 
	  [Bug #6272]

Wed Apr 25 05:56:56 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/optparse.rb (OptionParser#to_a): split for each lines.
	  [ruby-dev:45568][Bug #6348]

Tue Apr 24 21:20:39 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/optparse.rb (OptionParser#to_a): should split by end-of-line,
	  and MUST TEST IT, MUST RUN THE TEST, MUST VERIFY BEFORE BACKPORT.
	  [ruby-dev:45568][Bug #6348]

Tue Apr 24 14:55:41 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/optparse.rb (OptionParser#to_a): String#to_a is no longer
	  defined.  [ruby-dev:45568][Bug #6348]

Sat Apr 21 07:16:16 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* strftime.c (rb_strftime_with_timespec): fix padding of time zone
	  offset.  [ruby-dev:43287][Bug #4458]

	* strftime.c (rb_strftime_with_timespec): add an interim digit for
	  the timezone offset which is less than an hour.

	* strftime.c (rb_strftime_with_timespec): fix carry-up bug and
	  overwrite '+' with '-' if negative offset less than a hour.
	  [ruby-core:44447][Bug #6323]

Fri Apr 20 12:30:06 2012  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/ssl_certs/AddTrustExternalCARoot.pem:  Removed to avoid
	  conflict with ca-bundle.pem
	* lib/rubygems/ssl_certs/VerisignClass3PublicPrimaryCertificationAuthority-G2.pem:
	  ditto.
	* lib/rubygems/ssl_certs/Entrust_net-Secure-Server-Certification-Authority.pem:
	  ditto.

Fri Apr 20 08:30:55 2012  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems 1.8.23 which contains security
	  fixes:

	  RubyGems now disallows redirection from HTTPS to HTTP.

	  RubyGems now verifies SSL connections.
