@@ -1,5 +1,5 @@
 #define RUBY_VERSION "1.9.3"
-#define RUBY_PATCHLEVEL 204
+#define RUBY_PATCHLEVEL 205
 
 #define RUBY_RELEASE_DATE "2012-05-07"
 #define RUBY_RELEASE_YEAR 2012
